--- a/Prediction Assignment Writeup.Rmd
+++ b/Prediction Assignment Writeup.Rmd
@@ -112,13 +112,13 @@ predictTestRF
 
 ##Generating files to upload to submission
 ```{r}
- pml_write_files = function(x){
-+     n = length(x)
-+     path <- "answers"
-+     for(i in 1:n){
-+         filename = paste0("problem_id_",i,".txt")
-+         write.table(x[i],file=file.path(path, filename),quote=FALSE,row.names=FALSE,col.names=FALSE)
-+     }
-+ }
-> pml_write_files(predictTestRF)
+pml_write_files = function(x){
+     n = length(x)
+     path <- "answers"
+     for(i in 1:n){
+         filename = paste0("problem_id_",i,".txt")
+         write.table(x[i],file=file.path(path, filename),quote=FALSE,row.names=FALSE,col.names=FALSE)
+     }
+ }
+pml_write_files(predictTestRF)
 ```
